# rust-ingestion-pg

./: .env  Cargo.toml  README.md
src/: main.rs
src/database/: mod.rs  models.rs  sink_db.rs  source_db.rs
